--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -161,7 +161,7 @@
                                         <div _ngcontent-eyd-c348="" class="flex-shrink-0">
                                             <div _ngcontent-eyd-c348="" class="avatar-xs">
                                                 <div _ngcontent-eyd-c348="" class="avatar-title">
-                                                    <img (error)="imgError($event)" src="{{im.imagen}}" width="32" height="32" style="width: 32px; height: 32px;" />
+                                                    <img (error)="imgError($event)" src="{{im.imagen}}" width="32" height="32" style="width: 32px; height: 32px;background-color:currentColor;"/>
                                                 </div>
                                             </div>
                                         </div>
@@ -320,8 +320,8 @@
                                                 <div class="col-md-6">
                                                         <h6 style="color: #405189;"><b>EVIDENCIA CARGADA 
                                                         </b></h6>
-                                                        <img (error)="imgError($event)" src="{{evaluationDetail.evaluacionImg ? evaluationDetail.evaluacionImg[0] : ''}}" alt="Hallazgo respaldo"
-                                                                            class="users-avatar-shadow avatar mr-3" height="64" width="64">
+                                                        <img (error)="imgError($event)" src="{{evaluationDetail.evaluacionImg ? evaluationDetail.evaluacionImg[0] : ''}}" alt="Hallazgo respaldo" class="users-avatar-shadow avatar mr-3" height="64" width="64" style="cursor:pointer;" (click)="viewFile(evaluationDetail.evaluacionImg ? evaluationDetail.evaluacionImg[0] : null)">
+                                                        <!--<a href="javascript:void(0);" class="link-success" title="Descargar" (click)="downloadFile(evaluationDetail.evaluacionImg ? evaluationDetail.evaluacionImg[0]: null)"><i class="ri-download-2-line align-bottom me-1"></i></a>-->                    
                                                 </div>
                                                 
                                                 <div class="col-md-6">
@@ -871,7 +871,7 @@ sistema.</p>
                                 <div _ngcontent-eyd-c348="" class="flex-shrink-0">
                                     <div _ngcontent-eyd-c348="" class="avatar-xs">
                                         <div _ngcontent-eyd-c348="" class="avatar-title">
-                                            <img (error)="imgError($event)" src="{{imgHallazgos.imagen}}" width="32" height="32" style="width: 32px; height: 32px;" />
+                                            <img (error)="imgError($event)" src="{{imgHallazgos.imagen}}" width="32" height="32" style="width: 32px; height: 32px;background-color:currentColor;"/>
                                         </div>
                                     </div>
                                 </div>
