--- a/src/app/pages/projects/create/evaluation/task-view/task-view.component.html
+++ b/src/app/pages/projects/create/evaluation/task-view/task-view.component.html
@@ -63,9 +63,7 @@
             <div class="row g-0 mb-3">
                 <div class="col-md-6">
                         <h6 style="color: #405189;"><b>EVIDENCIA CARGADA</b></h6>
-                        <img [src]="articulo.evaluations ? articulo.evaluations.evaluacionImg : ''
-                                            " (error)="imgError($event)" alt="Hallazgo respaldo"
-                                            class="users-avatar-shadow avatar mr-3" height="64" width="64">
+                        <img src="{{articulo.evaluations ? articulo.evaluations.evaluacionImg : ''}}" (error)="imgError($event)" alt="Hallazgo respaldo" class="users-avatar-shadow avatar mr-3" height="64" width="64" style="cursor:pointer;" (click)="viewFile(articulo.evaluations ? articulo.evaluations.evaluacionImg : null)">
                 </div>
                 
                 <div class="col-md-6">
