--- a/src/app/pages/plans-work/plans-work-anality/assess/assess.component.html
+++ b/src/app/pages/plans-work/plans-work-anality/assess/assess.component.html
@@ -112,7 +112,7 @@
                 </div>
                 <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('COMPLETADA')">Completada</a>
                 <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('INICIADA')">Iniciada</a>
-                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CREADA')">Creada</a>
+                <!--<a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CREADA')">Creada</a>-->
                 </div>
             </div>
          </div>
