--- a/src/app/pages/plans-work/plans-work-anality/plans-work-anality.component.html
+++ b/src/app/pages/plans-work/plans-work-anality/plans-work-anality.component.html
@@ -48,9 +48,9 @@
                 <div id="customerList">
                     <div class="row g-4 mb-3">
                         <div class="col-sm-auto">
-                            <!--<div class="d-flex gap-1">
-                                <h4 class="card-title mb-0">Tareas</h4>
-                            </div>-->
+                            <div class="d-flex gap-1">
+                                <h4 class="card-title mb-0">{{workPlan && workPlan.descripcion ? workPlan.descripcion : ''}}</h4>
+                            </div>
                         </div>
                         <div class="col-sm">
                             <div class="d-flex justify-content-sm-end">
