ajustes otras obligaciones y peticiones 28/02

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1215,7 +1215,7 @@
                                            <i class="mdi align-middle lh-1 me-2"  [ngClass]="{'mdi-check-circle text-success': validChecked4(o.id) == 1, 'mdi-alert-circle text-warning': validChecked4(o.id) == 2,'mdi-checkbox-blank-circle text-gray': validChecked4(o.id) == null || validChecked4(o.id) == 0 }"></i>
                                     </div>
                                     <div class="flex-shrink-0 ms-2">
-                                        {{o.nombre}} | {{o.descripcion}}
+                                        {{o.nombre}}<!-- | {{o.descripcion}}-->
                                     </div>
                                     </div>
                                     </div> 
@@ -1833,7 +1833,7 @@
                                         </div>
                                 </div>
                 
-                                <div class="row mb-3 align-items-center justify-content-center">
+                                <!--<div class="row mb-3 align-items-center justify-content-center">
                                     <h4>Ámbito normativo a gestionar</h4>
                                     
                                     <div class="col-sm-4">
@@ -1878,7 +1878,7 @@
                                         </div>
                 
                                     </div>
-                                </div>
+                                </div>-->
 
                                 <div class="row mb-3 align-items-center justify-content-center">
                                     
