--- a/src/app/pages/projects/create/evaluation/detail-all/evaluation-detail-all.component.html
+++ b/src/app/pages/projects/create/evaluation/detail-all/evaluation-detail-all.component.html
@@ -108,7 +108,7 @@
             </div>
             <div class="col-sm-auto">
                 <div class="d-md-flex justify-content-sm-end gap-2">
-                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cumplimiento" data-choices data-choices-search-false id="choices-priority-input3" (change)="selectCumplimiento($event)">
+                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;" placeholder="Seleccione Cumplimiento" data-choices data-choices-search-false id="choices-priority-input3" (change)="selectCumplimiento($event)">
                         <option value="" [selected]="!filtro_tipo">Seleccione Cumplimiento</option>
                         <option value="CUMPLE" [selected]="filtro_tipo == 'CUMPLE'">
                             Cumple
@@ -119,9 +119,12 @@
                         <option value="NO CUMPLE" [selected]="filtro_tipo == 'NO CUMPLE'">
                             No Cumple
                         </option>
+                        <option value="NO EVALUADO" [selected]="filtro_tipo == 'NO EVALUADO'">
+                            No Evaluado
+                        </option>
                     </select>
                     
-                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Criticidad" data-choices data-choices-search-false id="choices-priority-input4" (change)="selectCriticidad($event)">
+                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;" placeholder="Seleccione Criticidad" data-choices data-choices-search-false id="choices-priority-input4" (change)="selectCriticidad($event)">
                         <option value="" [selected]="!filtro_criticidad">Seleccione Criticidad</option>
                         <option value="Alta" [selected]="filtro_criticidad == 'Alta'">
                             Alta
@@ -137,7 +140,7 @@
                         </option>
                     </select>
                     
-                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione el Atributo" data-choices data-choices-search-false id="choices-priority-input5" (change)="selectAtributo($event)">
+                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;" placeholder="Seleccione el Atributo" data-choices data-choices-search-false id="choices-priority-input5" (change)="selectAtributo($event)">
                         <option value="" [selected]="!filtro_atributo">Seleccione Atributo</option>
                         <option value="Permiso" [selected]="filtro_atributo == 'Permiso'">
                             Permiso
@@ -153,14 +156,14 @@
                         </option>
                     </select>
                     
-                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cuerpo Legal" data-choices data-choices-search-false id="choices-priority-input2" (change)="selectCuerpo($event)">
+                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;" placeholder="Seleccione Cuerpo Legal" data-choices data-choices-search-false id="choices-priority-input2" (change)="selectCuerpo($event)">
                                 <option value="" [selected]="!filtro_cuerpo">Seleccione Cuerpo legal</option>
                                 <option value="{{c.cuerpoLegal}}" *ngFor="let c of cuerpos_articulos; let i = index;" [selected]="filtro_cuerpo == c.cuerpoLegal">
                                     {{c.cuerpoLegal}} | {{c.tituloNorma.length > 60 ? c.tituloNorma.substring(0, 60)+'...' : c.tituloNorma}}
                                 </option>
                     </select>
                     <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
-                        <input type="text" class="form-control" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;margin-right: 39px;" placeholder="Buscar artículo" [(ngModel)]="term"><!--"service.searchTerm"-->
+                        <input type="text" class="form-control" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;" placeholder="Buscar artículo" [(ngModel)]="term"><!--"service.searchTerm"-->
                         <i class="ri-search-line search-icon"></i>
                     </div>
                     
