--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -147,7 +147,7 @@
                                                         
                                                         <div class="col-lg-2 col text-center" (click)="goEvaluation(s.id, s.evaluations)" *ngIf="s.proyectoId == project_id">
                                                             <h6 style="color: #405189;">{{s.articulo}}</h6>
-                                                            <span class="badge" style="min-width: 170px;" [ngClass]="{
+                                                            <span class="badge" style="width: 100%;" [ngClass]="{
                                                                 'text-bg-no-evaluado': s.project_article.articuloTipo == 'reporte','text-bg-primary': s.project_article.articuloTipo == 'permiso', 'text-bg-info': s.project_article.articuloTipo == 'monitoreo'}" *ngIf="s.project_article && s.project_article.articuloTipo">{{s.project_article.articuloTipo.toUpperCase() }}</span>
                                                         </div>
                                                         <div class="col-lg-4 col" style="cursor: text;" *ngIf="s.proyectoId == project_id"><!--(click)="goEvaluation(s.id, s.evaluations)"-->
@@ -172,7 +172,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-2 col text-center" (click)="goEvaluation(s.id, s.evaluations)" *ngIf="s.proyectoId == project_id">
-                                                            <span class="badge" style="min-width: 170px;" [ngClass]="{
+                                                            <span class="badge" style="width: 100%;" [ngClass]="{
                                                                 'text-bg-no-evaluado': !s.evaluations.estado || s.evaluations.evaluationProyectId != idEvaluation,'text-bg-danger': (s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'NO CUMPLE'), 'text-bg-success': s.evaluations.evaluationProyectId == idEvaluation &&  s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE', 'text-bg-warning': s.evaluations.evaluationProyectId == idEvaluation &&  s.evaluations.estado && getCategoryStatus(s.evaluations.estado) == 'CUMPLE PARCIALMENTE'}">{{s.evaluations.evaluationProyectId == idEvaluation && s.evaluations.estado ? s.evaluations.estado : 'NO EVALUADO' }}</span>
                                                         </div>
                                                         <div class="col-lg-1 col text-center" *ngIf="s.proyectoId == project_id && !evaluations.auditoria">
